--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
+    "@reduxjs/toolkit": "^2.2.5",
     "@types/react-redux": "^7.1.33",
     "axios": "^1.6.8",
     "react": "^18.2.0",
